prep for 1.9.0 Release

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -2258,7 +2258,9 @@ Request Body:
 Content-Type: application/json
 Request Body:
 {
-	"note":"Due Diligence done and all documents received"
+   "destinationGroupId":"13",
+   "staffId":"1",
+   "note":"Due Diligence done and all documents received"
 }			
 			</code>
 	        <code class="method-response">
