resolved concurrent exception

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -458,7 +458,7 @@
 							<tr class="alt">
 								<td></td>
 								<td>loans/{loanId}/charges/{loanChargeId}</td>
-								<td><a href="#loans_charges_pay">Pay Loan Charge</a></td>
+								<td><a href="#loans_charges_pay">Pay Loan Charge from Linked Savings</a></td>
 								<td><a href="#loans_charges_retrieve">Retrieve a Loan Charge</a></td>
 								<td><a href="#loans_charges_update">Modify a Loan Charge</a></td>
 								<td><a href="#loans_charges_delete">Delete a Loan Charge</a></td>
@@ -19145,7 +19145,7 @@ GET https://DomainName/api/v1/search?query=000000111
 				<tr>
 					<td></td>
 					<td>loans/{loanId}/charges/{loanChargeId}</td>
-					<td><a href="#loans_charges_pay">Pay a Loan Charge</a></td>
+					<td><a href="#loans_charges_pay">Pay Loan Charge from Linked Savings</a></td>
 					<td><a href="#loans_charges_retrieve">Retrieve a Loan Charge</a></td>
 					<td><a href="#loans_charges_update">Modify a Loan Charge</a></td>
 					<td><a href="#loans_charges_delete">Delete a Loan Charge</a></td>
